<resources>
    <string name="app_name">passdance</string>
    <string name="menu_search_person">Найти пользователя</string>
    <string name="menu_create_person">Новый пользователь</string>
    <string name="menu_stat">Статистика</string>
    <string name="search_person_title">Введите или отсканируйте номер с карточки</string>
    <string name="person_lastname">Фамилия</string>
    <string name="person_cardnum">Номер карточки:</string>
    <string name="person_search_button">Поиск</string>
    <string name="person_search_scan_button">Сканировать карточку</string>
    <string name="person_search_select_button">Выбрать</string>
    <string name="title_activity_person">personActivity</string>
    <string name="person_title">Пользователь</string>
    <string name="person_firstname">Имя:</string>
    <string name="addpass_btn">Добавить абонемент</string>
    <string name="person_add_lesson_btn">Списать занятие</string>
    <string name="edit_pass_btn">Редактировать абонемент</string>
    <string name="delete_pass_btn">Удалить абонемент</string>
    <string name="pass_title">Абонемент</string>
    <string name="pass_course">Курс</string>
    <string name="pass_dtlaunch">Дата начала:</string>
    <string name="edit_text_size">Дата окончания:</string>
    <string name="pass_ok">Сохранить</string>
    <string name="barcode_title">Чтение карточки</string>
    <string name="add_person_title">Новый пользователь</string>
    <string name="add_person_button">Сохранить</string>
    <string name="search_title">Введите номер или фамилию</string>
    <string name="wrongSearchParams">Введите номер или фамилию!</string>
    <string name="errorGetPersons">Ошибка сервера при получении списка юзеров!</string>
    <string name="personsNotFound">Полтзователь не найден!</string>
    <string name="passes_title">Абонементы:</string>
    <string name="add_pass_button">Абонемент</string>
    <string name="pass_lessonCounts">Число уроков:</string>
    <string name="history_title">История уроков:</string>
    <string name="history_person_button">История уроков</string>
    <string name="pass_delete">Удалить</string>
</resources>
