<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.maximumdance.passcontrol.PersonActivity"
    android:orientation="vertical">


    <android.support.constraint.Guideline
        android:id="@+id/personGuidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/personTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        android:padding="@dimen/header_text_padding"
        android:textSize="@dimen/header_text_size"
        android:text="@string/person_title"
        />


    <TextView
        android:id="@+id/personLastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/personGuidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/personTitle"
        android:text="@string/person_lastname"
        android:textSize="@dimen/edit_text_size"/>


    <EditText
        android:id="@+id/personLastName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="@id/personGuidelineCenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personTitle"
        android:textSize="@dimen/edit_text_size"
        android:text=""
        android:inputType="text"
        />

    <TextView
        android:id="@+id/personFirstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/personGuidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/personLastNameLabel"
        android:text="@string/person_firstname"
        android:textSize="@dimen/edit_text_size"/>


    <EditText
        android:id="@+id/personFirstName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="@id/personGuidelineCenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personLastName"
        android:textSize="@dimen/edit_text_size"
        android:text=""
        android:inputType="text"
        />


    <TextView
        android:id="@+id/personCardLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/personGuidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/personFirstNameLabel"
        android:text="@string/person_cardnum"
        android:textSize="@dimen/edit_text_size"/>


    <EditText
        android:id="@+id/personCard"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="@id/personGuidelineCenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personFirstName"
        android:textSize="@dimen/edit_text_size"
        android:inputType="text"
        android:text=""
        />


    <TextView
        android:id="@+id/passesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personCard"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        android:padding="@dimen/header_text_padding"
        android:textSize="@dimen/header_text_size"
        android:text="@string/passes_title"
        />

    <ListView
        android:id="@+id/passesList"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toBottomOf="@+id/passesTitle"
        />


    <Button
        android:id="@+id/addPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:text="@string/add_pass_button"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/addPersonButton" />

    <Button
        android:id="@+id/addPersonButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:text="@string/add_person_button"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />




</android.support.constraint.ConstraintLayout>