<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.maximumdance.passcontrol.PassActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/passTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        android:padding="@dimen/header_text_padding"
        android:textSize="@dimen/header_text_size"
        android:text="@string/pass_title"
        />

    <android.support.constraint.Guideline
        android:id="@+id/passGuidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:id="@+id/passСourseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/passGuidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/passTitle"
        android:text="@string/pass_course"
        android:textSize="@dimen/edit_text_size"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/passCourses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="@id/passGuidelineCenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passTitle"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/passDtLaunchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/passGuidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/passСourseText"
        android:layout_marginTop="40dp"
        android:text="@string/pass_dtlaunch"
        android:textSize="@dimen/edit_text_size"/>

    <TextView
        android:id="@+id/passDtLaunch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/edit_text_size"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passСourseText" />

    <TextView
        android:id="@+id/passDtExpireLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/passGuidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/passDtLaunch"
        android:layout_marginTop="40dp"
        android:text="@string/edit_text_size"
        android:textSize="@dimen/edit_text_size" />

    <TextView
        android:id="@+id/passDtexpire"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/passDtLaunch"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/edit_text_size"
        />

    <Button
        android:id="@+id/passOk"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:text="@string/pass_ok"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>