<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.maximumdance.passcontrol.PersonSearchActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        android:padding="@dimen/header_text_padding"
        android:textSize="@dimen/header_text_size"
        android:text="@string/search_title"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/userGuidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:id="@+id/searchСardNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/userGuidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/searchTitle"
        android:text="@string/person_cardnum"
        android:textSize="@dimen/edit_text_size"/>


    <EditText
        android:id="@+id/searchСardNumberText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="@id/userGuidelineCenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTitle"
        android:textSize="@dimen/edit_text_size"

        android:inputType="number"
        />


    <TextView
        android:id="@+id/searchLastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/userGuidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/searchСardNumberLabel"
        android:text="@string/person_lastname"
        android:textSize="@dimen/edit_text_size"/>


    <EditText
        android:id="@+id/searchLastNameText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="@id/userGuidelineCenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchСardNumberText"
        android:textSize="@dimen/edit_text_size"
        android:inputType="text"
        />


    <Button
        android:id="@+id/searchUserButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:text="@string/person_search_button"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchLastNameText" />


<!--
    <Button
        android:id="@+id/scan_user_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:text="@string/user_search_scan_button"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchUserButton" />
-->
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="200dp"
    android:layout_marginTop="20dp"
    app:layout_constraintTop_toBottomOf="@+id/searchUserButton"
    >
    <ListView
        android:id="@+id/userList"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"

        />
</ScrollView>
<!--
    <Button
        android:id="@+id/search_user_select_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:text="@string/user_search_select_button"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
-->
</androidx.constraintlayout.widget.ConstraintLayout>